EXTRA_DIST = \
	cmdline.h \
	cmdline.c \
	conversion.h \
	conversion.c \
	processor.h \
	processor.c \
	test-utils-core.h \
	test-utils-core.cc \
	test-utils-bufrex.h \
	test-utils-bufrex.cc \
	test-utils-msg.h \
	test-utils-msg.cc \
	test-utils.h \
	test-utils.cc \
	tut.h \
	tut-main.cc \
	tut_reporter.h \
	tut_restartable.h \
	runtest \
	test-bufr-table.txt \
	test-crex-d-table.txt \
	test-crex-table.txt
